# AuthApi

./: .gitignore  Cargo.toml  README.md
migrations/2022-11-07-190758_AuthApi/: down.sql  up.sql
src/: .env  controllers.rs  entities.rs  main.rs  models.rs  repo.rs  schema.rs  utils.rs
